--- a/package.json
+++ b/package.json
@@ -22,18 +22,17 @@
   "types": "lib/index.d.ts",
   "dependencies": {
     "classnames": "^2.2.6",
-    "cleave.js": "^1.5.10",
-    "css-vars-ponyfill": "2.1.1",
+    "cleave.js": "^1.6.0",
     "day-picker-react": "^1.0.0",
     "debounce": "^1.2.0",
     "prop-types": "^15.7.2",
     "rc-animate": "^3.1.1",
     "rc-select": "^11.4.1",
-    "rc-slider": "^9.5.3",
+    "rc-slider": "^9.7.1",
     "rc-tree-select": "^4.1.2",
     "rc-trigger": "4.2.2",
-    "rc-util": "^5.4.0",
-    "rc-virtual-list": "^3.2.2",
+    "rc-util": "^5.7.0",
+    "rc-virtual-list": "^3.2.6",
     "react-lifecycles-compat": "^3.0.4",
     "shallowequal": "^1.1.0"
   },
@@ -70,135 +69,130 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.12.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/runtime": "^7.8.7",
-    "@babel/standalone": "^7.8.8",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
+    "@babel/standalone": "^7.12.12",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.21",
     "@types/prop-types": "^15.7.3",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "adui-icon": "1.5.5",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "adui-icon": "1.5.7",
     "async": "^3.2.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "25.1.0",
-    "babel-loader": "8.0.6",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.2",
     "babel-plugin-add-react-displayname": "0.0.5",
-    "babel-plugin-import": "^1.13.0",
-    "babel-preset-react-app": "^9.1.1",
+    "babel-plugin-import": "^1.13.3",
+    "babel-preset-react-app": "^10.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.26.0",
-    "bisheng": "^1.4.6",
-    "capitalize": "^2.0.2",
+    "bisheng": "^3.0.0",
+    "capitalize": "^2.0.3",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "chalk": "3.0.0",
+    "chalk": "4.1.0",
     "chroma-js": "^2.1.0",
-    "commitlint": "^8.3.5",
-    "create-react-class": "^15.6.3",
+    "commitlint": "^11.0.0",
+    "create-react-class": "^15.7.0",
     "create-react-context": "^0.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
     "css-split-webpack-plugin": "^0.2.6",
     "cssnano": "^4.1.10",
     "delegate": "^3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-alloy": "^3.6.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-alloy": "^3.10.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-markdown": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "file-loader": "5.1.0",
-    "fs-extra": "8.1.0",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "^4.2.3",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "file-loader": "6.2.0",
+    "fs-extra": "9.0.1",
+    "html-webpack-plugin": "4.5.1",
+    "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
-    "intersection-observer": "^0.7.0",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.8",
-    "lodash": "^4.17.15",
+    "intersection-observer": "^0.12.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "lodash": "^4.17.20",
     "lz-string": "^1.4.4",
-    "mini-css-extract-plugin": "^0.9.0",
-    "mutationobserver-shim": "^0.3.3",
+    "mini-css-extract-plugin": "^1.3.4",
+    "mutationobserver-shim": "^0.3.7",
     "offline-plugin": "^5.0.7",
     "perspective.js": "^1.0.0",
-    "postcss-flexbugs-fixes": "4.2.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "3.0.0",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "promise": "8.1.0",
     "raf": "3.4.1",
-    "raw-loader": "^4.0.0",
-    "rc-tween-one": "^2.6.8",
+    "raw-loader": "^4.0.2",
+    "react": "^17.0.1",
     "react-app-rewire-scss": "^1.0.2",
-    "react-app-rewired": "^2.1.5",
-    "react-dev-utils": "^10.2.0",
-    "react-docgen": "^5.3.0",
+    "react-app-rewired": "^2.1.8",
+    "react-dev-utils": "^11.0.1",
+    "react-docgen": "^5.3.1",
     "react-document-title": "^2.0.3",
-    "react-element-to-jsx-string": "^14.3.1",
-    "react-intl": "^4.1.1",
-    "react-syntax-highlighter": "^12.2.1",
-    "react-test-renderer": "^16.13.0",
-    "regenerator-runtime": "^0.13.5",
-    "resolve": "1.15.1",
-    "sass": "^1.26.3",
-    "scrollama": "^2.2.0",
-    "sinon": "^9.0.1",
-    "standard-version": "^9.0.0",
+    "react-dom": "^17.0.1",
+    "react-element-to-jsx-string": "^14.3.2",
+    "react-intl": "^5.10.16",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-test-renderer": "^17.0.1",
+    "regenerator-runtime": "^0.13.7",
+    "resolve": "1.19.0",
+    "sass": "^1.32.4",
+    "scrollama": "^2.2.1",
+    "sinon": "^9.2.3",
+    "standard-version": "^9.1.0",
     "style-loader": "^1.1.3",
-    "stylelint": "^13.2.1",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-order": "^4.0.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.14.2",
-    "stylelint-webpack-plugin": "^1.2.3",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "svgo": "^1.3.2",
     "sw-precache-webpack-plugin": "1.0.0",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.1",
-    "tslint": "^6.1.0",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-react": "^4.2.0",
-    "typescript": "^3.9.2",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "3.0.0",
+    "url-loader": "4.1.1",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "webpackbar": "^4.0.0",
-    "whatwg-fetch": "3.0.0"
+    "whatwg-fetch": "3.5.0"
   }
 }
