--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "rc-animate": "^3.1.1",
     "rc-select": "^11.4.1",
     "rc-slider": "^9.7.1",
-    "rc-tree-select": "^4.1.2",
+    "rc-tree-select": "^4.3.0",
     "rc-trigger": "4.2.2",
     "rc-util": "^5.7.0",
     "rc-virtual-list": "^3.2.6",
@@ -89,6 +89,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "adui-icon": "1.5.7",
     "async": "^3.2.0",
     "autoprefixer": "^9.8.6",
@@ -117,7 +118,6 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
