--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "1.5.4",
+  "version": "1.5.2",
   "files": [
     "lib",
     "dist",
@@ -42,6 +42,8 @@
   },
   "sideEffects": [
     "dist/*",
+    "es/**/style/*",
+    "lib/**/style/*",
     "*.scss"
   ],
   "scripts": {
