--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "1.6.1-alpha.0",
+  "version": "1.6.1-alpha.3",
   "files": [
     "lib",
     "es",
@@ -28,6 +28,7 @@
     "cleave.js": "^1.6.0",
     "day-picker-react": "^1.0.1",
     "debounce": "^1.2.0",
+    "loader-utils": "^2.0.0",
     "prop-types": "^15.7.2",
     "rc-animate": "^3.1.1",
     "rc-select": "^12.1.6",
