--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "target": "es6",
     "lib": ["dom", "es2017"],
     "skipLibCheck": true,
-    "isolatedModules": true,
+    "isolatedModules": true
   },
   "exclude": ["node_modules", "**/*.test.tsx", "lib", "es"]
 }
