--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-alpha.10",
   "files": [
     "lib",
     "es",
@@ -31,6 +31,7 @@
     "day-picker-react": "^1.0.1",
     "debounce": "^1.2.0",
     "loader-utils": "^2.0.0",
+    "popmotion": "^9.3.5",
     "prop-types": "^15.7.2",
     "rc-animate": "^3.1.1",
     "rc-select": "^12.1.10",
