--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.0.1-alpha.8",
+  "version": "2.1.0",
   "files": [
     "lib",
     "es",
