--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "files": [
     "lib",
     "es",
@@ -173,13 +173,13 @@
     "promise": "8.1.0",
     "raf": "3.4.1",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-app-rewire-scss": "^1.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dev-utils": "^11.0.1",
     "react-docgen": "^5.3.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-element-to-jsx-string": "^14.3.2",
     "react-intl": "^5.10.16",
     "react-syntax-highlighter": "^15.4.3",
@@ -199,6 +199,7 @@
     "stylelint-webpack-plugin": "^2.1.1",
     "svgo": "^1.3.2",
     "sw-precache-webpack-plugin": "1.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
