--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.3.2-alpha.3",
+  "version": "2.4.0",
   "files": [
     "lib",
     "es",
