--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "popmotion": "^9.4.0",
     "prop-types": "^15.7.2",
     "rc-animate": "^3.1.1",
+    "rc-motion": "^2.4.4",
     "rc-select": "^12.1.10",
     "rc-slider": "^9.7.2",
     "rc-tree-select": "^4.3.2",
