--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "release": "standard-version",
     "release-minor": "npm run release -- --release-as minor",
     "prepublishOnly": "npm run compile",
-    "prettier": "prettier -c --write **/*"
+    "prettier": "prettier -c --write components"
   },
   "husky": {
     "hooks": {
