--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rc-trigger": "^5.2.9",
     "rc-util": "^5.13.2",
     "rc-virtual-list": "^3.3.0",
+    "react-window": "^1.8.6",
     "shallowequal": "^1.1.0"
   },
   "peerDependencies": {
