--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rc-util": "^5.15.0",
     "rc-virtual-list": "^3.4.2",
     "react-window": "^1.8.6",
+    "resize-observer-polyfill": "^1.5.1",
     "shallowequal": "^1.1.0"
   },
   "peerDependencies": {
