--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "rc-motion": "^2.4.9",
     "rc-select": "^14.1.1",
     "rc-slider": "^9.7.5",
-    "rc-tree-select": "^5.3.0",
+    "rc-tree-select": "4.8.0",
     "rc-trigger": "^5.2.16",
     "rc-util": "^5.21.0",
     "rc-virtual-list": "^3.4.6",
