--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.35.0",
+  "version": "2.35.1-alpha.1",
   "files": [
     "lib",
     "es",
