--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -8,6 +8,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@master
 
+    - name: Setup Node.js 16
+      uses: actions/setup-node@v2.5.2
+      with:
+        node-version: 16
+
     - name: install
       run: yarn
 
