site: 增加组件级的日志

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "release": "standard-version",
     "release-minor": "npm run release -- --release-as minor",
     "prepublishOnly": "npm run compile",
-    "prettier": "prettier -c --write components"
+    "prettier": "prettier -c --write components",
+    "component-log": "node scripts/component-log.js"
   },
   "husky": {
     "hooks": {
