--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint-staged": "lint-staged",
     "eslint": "eslint $(git diff-index --cached HEAD --name-only --diff-filter ACMR | egrep '.js$')",
-    "start": "node scripts/generate-svg-icons.js && rimraf _site && mkdir _site && NODE_ENV=development bisheng start -c ./site/bisheng.config.js",
-    "site": "node scripts/generate-svg-icons.js && rimraf _site && cross-env NODE_ENV=production bisheng build -c ./site/bisheng.config.js",
+    "start": "node scripts/generate-svg-icons.js && npm run component-log && rimraf _site && mkdir _site && NODE_ENV=development bisheng start -c ./site/bisheng.config.js",
+    "site": "node scripts/generate-svg-icons.js && npm run component-log && rimraf _site && cross-env NODE_ENV=production bisheng build -c ./site/bisheng.config.js",
     "test": "jest --coverage",
     "release": "standard-version",
     "release-minor": "npm run release -- --release-as minor",
