--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -14,7 +14,7 @@ jobs:
         node-version: 16
 
     - name: install
-      run: yarn
+      run: yarn install --force
 
     - name: build
       run: node -v && npm run site
