--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adui",
   "author": "yijiejiang <yijiejiang@tencent.com>",
-  "version": "2.45.5-alpha.4",
+  "version": "2.45.5",
   "files": [
     "lib",
     "es",
