--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "tailwind": "tailwindcss-cli build -i ./adui-tailwind.css  -o ./adui-tailwind-build.css --no-autoprefixer && uglifycss ./adui-tailwind-build.css --output ./adui-tailwind-build.css",
-    "compile": "node scripts/generate-svg-icons.js && npm run tailwind && npm run compile:lib && npm run compile:es && node scripts/build",
+    "compile": "node scripts/generate-svg-icons.js && npm run compile:lib && npm run compile:es && node scripts/build",
     "compile:lib": "rimraf lib && mkdir lib && mkdir lib/style && tsc --outDir lib --declaration --emitDeclarationOnly && NODE_ENV=production COMPILE_TYPE=lib webpack -p --config webpack.config.js && cp components/style/base.css lib/style/base.css && babel components --out-dir lib --extensions \".ts,.tsx\" --source-maps inline --ignore 'components/**/style/*'",
     "compile:es": "rimraf es && mkdir es && mkdir es/style && tsc --outDir es --declaration --emitDeclarationOnly && NODE_ENV=production COMPILE_TYPE=es webpack -p --config webpack.config.js && cp components/style/base.css es/style/base.css && babel components --no-babelrc --config-file ./babel.config.json --out-dir es --extensions \".ts,.tsx\" --source-maps inline --ignore 'components/**/style/*'",
     "commitmsg": "commitlint -e $GIT_PARAMS",
